<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/ThemeOverlay.SemDendis.FullscreenContainer"
        tools:context=".progress.ProgressFragment"
        android:orientation="vertical"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="10dp">


                <TextView
                    android:id="@+id/id_nameofprogresschart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/progress"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="40dp">

                    <TextView
                        android:id="@+id/progress_aaaaa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        />
                </ScrollView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_margin="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_last_date"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textSize="24sp"
                        android:gravity="center"
                        android:hint="@string/last_added_date"
                        android:text="@string/last_date" />

                    <TextView
                        android:id="@+id/text_last_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textSize="24sp"
                        android:gravity="center"
                        android:hint="@string/last_added_weight"
                        android:text="@string/last_weight" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:layout_margin="10dp">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_add"
                    android:contentDescription="@string/click_add_button" />

            </androidx.cardview.widget.CardView>




</LinearLayout>






