<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >


    <ImageButton
        android:id="@+id/iB_main_straching"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:contentDescription="@string/press_to_get_to_streach"
        android:scaleType="centerCrop"
        android:src="@drawable/aa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iB_main_Training" />

    <ImageButton
        android:id="@+id/iB_main_Training"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/press_to_get_to_trainig"
        android:scaleType="centerCrop"
        android:src="@drawable/working_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iW_main_tapeta" />

    <ImageButton
        android:id="@+id/iB_main_Progress"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/press_to_get_to_progress"
        android:scaleType="centerCrop"
        android:src="@drawable/progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iB_main_straching" />

    <ImageView
        android:id="@+id/iW_main_tapeta"
        android:layout_width="356dp"
        android:layout_height="238dp"
        android:contentDescription="@string/press_to_view_to_tapeta"
        android:scaleType="fitCenter"
        android:scrollbarSize="1dp"
        android:src="@drawable/mainphoto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

</androidx.constraintlayout.widget.ConstraintLayout>