<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".streach.StreachBaseFragment">

<LinearLayout
    android:layout_width="257dp"
    android:layout_height="419dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.508">

    <ImageButton
        android:id="@+id/vrch_tela_imgb"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/streaching_na_vrch_tela"
        android:src="@drawable/upperstreach"
        android:scaleType="centerCrop"
        />

    <ImageButton
        android:id="@+id/stred_tela_imgB"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/streaching_na_stred_tela"
        android:src="@drawable/streachmidbody"
        android:scaleType="centerCrop"/>

    <ImageButton
        android:id="@+id/dolna_cast_tela_imgB"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/streaching_na_spodok_tela"
        android:scaleType="centerCrop"
        android:src="@drawable/streachlowerbody"
        />


</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>